# human_bio_dataset

./: CMakeLists.txt  README.md  package.xml
testing/human_one/: [0612-0703]_human1_.csv  [0904-1027]_human1_.csv  [0921-1010]_human1_.csv  [1018-1131]_human1_.csv  [1159-1255]_human1_.csv  [1197-1363]_human1_.csv  [1248-1428]_human1_.csv  [1496-1591]_human1_.csv  [1595-1694]_human1_.csv  [1639-1779]_human1_.csv  [1648-1802]_human1_.csv  [1809-1897]_human1_.csv  [1881-1970]_human1_.csv  [1896-2006]_human1_.csv  [2020-2116]_human1_.csv  [2142-2234]_human1_.csv  [2259-2349]_human1_.csv  [2483-2568]_human1_.csv  [2550-2642]_human1_.csv  [2556-2697]_human1_.csv  [3124-3230]_human1_.csv
testing/human_two/: [0612-0703]_human2_.csv  [0904-1027]_human2_.csv  [0921-1010]_human2_.csv  [1018-1131]_human2_.csv  [1159-1255]_human2_.csv  [1197-1363]_human2_.csv  [1248-1428]_human2_.csv  [1496-1591]_human2_.csv  [1595-1694]_human2_.csv  [1639-1779]_human2_.csv  [1648-1802]_human2_.csv  [1809-1897]_human2_.csv  [1881-1970]_human2_.csv  [1896-2006]_human2_.csv  [2020-2116]_human2_.csv  [2142-2234]_human2_.csv  [2259-2349]_human2_.csv  [2483-2568]_human2_.csv  [2550-2642]_human2_.csv  [2556-2697]_human2_.csv  [3124-3230]_human2_.csv
training/human_one/: [0235-0413]_human1_.csv  [0256-0408]_human1_.csv  [0282-0414]_human1_.csv  [0310-0416]_human1_.csv  [0335-0444]_human1_.csv  [0336-0518]_human1_.csv  [0398-0540]_human1_.csv  [0426-0511]_human1_.csv  [0433-0586]_human1_.csv  [0451-0556]_human1_.csv  [0512-0674]_human1_.csv  [0542-0804]_human1_.csv  [0579-0693]_human1_.csv  (+60 more)
(+73 files in other folders)
