<?xml version="1.0"?>
<package>
  <name>human_bio_dataset</name>
  <version>0.0.0</version>
  <description>Collaborative motion dataset</description>
  <maintainer email="mainprice@gmail.com">Jim Mainprice</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
